data/derived/fa15/progs/unify/prog4112.ml.out
Characters 137-141:
  | Sine e'                -> sin(pi *. eval(e'))
                                            ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
